# kafka-schema-reg-mcp

./: .cursorrules  .dockerignore  .gitignore  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE_CODE_SKILLS_SETUP.md  CODEOWNERS  COMPLETE_CONFIGURATION_EXAMPLES.md  Dockerfile  Dockerfile.bridge  Dockerfile.glama  Dockerfile.slim.bak  GETTING_STARTED.md  GLAMA_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY_ISSUE_73.md  MCP-2025-06-18-MIGRATION-GUIDE.md  MCP_PROTOCOL_VERSION_COMPLIANCE.md  MCP_TRANSFORMATION.md  MULTI_REGISTRY_IMPLEMENTATION.md  NUMBERED_CONFIG_GUIDE.md  NUMBERED_CONFIG_SUMMARY.md  OAUTH_2_1_COMPLIANCE.md  PR_SUMMARY_MCP_HEADER_VALIDATION.md  PR_UPDATE.md  QUICK_REFERENCE.md  README-LLAMA-INTEGRATION.md  README-LLAMA.md  README-v2.0.0-HIGHLIGHTS.md  README.md  RESOURCE_LINKING.md  SECURITY.md  SETUP_SUMMARY.md  STRUCTURED_OUTPUT_README.md  TESTING_SETUP_GUIDE.md  TRANSFORMATION_SUCCESS_SUMMARY.md  advanced_mcp_test.py  batch_operations.py  batch_operations_enhanced.py  bulk_operations_mcp_integration.py  (+69 more)
.claude-code/: README.md  SKILLS_GUIDE.md  config.json  workspace.json
.claude-code/skills/: README.md  context-compare.md  lint-and-test.md  migration-plan.md  schema-evolve.md  schema-generate.md
.claude-code/templates/: aggregate-schema.json  command-schema.json  entity-schema.json  event-schema.json
.github/: HELM_PUBLISHING_GUIDE.md  PULL_REQUEST_TEMPLATE.md  RELEASE_PROCESS.md  cr.yaml  dependabot-disabled.yml  dependabot.yml
.github/workflows/: build.yml  docker-security-scan.yml  inspector-tests.yml  publish.yml  release-helm-chart.yml  security-scan.yml  tag-stable.yml  test.yml
config-examples/: README.md  claude-code-README.md  claude-code-commands-config.json  claude-code-mcp-config.json  claude-code-templates-config.json  claude-code-workspace-config.json  claude_desktop_async_monitoring_config.json  claude_desktop_config.json  claude_desktop_docker_config.json  claude_desktop_env_file.json  claude_desktop_local_mac.json  claude_desktop_local_testing.json  claude_desktop_local_testing_python.json  claude_desktop_modular_config.json  claude_desktop_modular_docker_config.json  claude_desktop_multi_registry_docker.json  claude_desktop_native_mac.json  claude_desktop_numbered_config.json  claude_desktop_readonly_config.json  claude_desktop_simple_multi.json  claude_desktop_slim_mode_config.json  claude_desktop_stable_config.json  claude_desktop_stable_config_mac.json  claude_desktop_v2_config.json  claude_desktop_v2_multi_registry.json  claude_desktop_v2_oauth_config.json  claude_desktop_viewonly_config.json  cursor-mcp-config.json  docker-compose.mcp.yml  jetbrains-mcp-config.xml  mcp-ide-integration.md  setup-ide-mcp.sh  vscode-mcp-settings.json  vscode-mcp-tasks.json
demo/: .env.template  README.md  client-example.py  docker-compose-llama.yml  requirements-bridge.txt  run-llama-mcp.sh
docs/: ELICITATION.md  README.md  SECURITY_SCAN_CONFIG.md  SMART_DEFAULTS.md  SMART_DEFAULTS_CONFIG.md  SSL_TLS_SECURITY.md  api-reference.md  cursor-directory-submission.md  deployment.md  elicitation-guide.md  enhanced-task-management.md  github-oauth-summary.md  glama-integration.md  grafana-dashboard-mcp-metrics.json  helm-monitoring-guide.md  ide-integration.md  mcp-tools-reference.md  multi_step_elicitation.md  oauth-providers-guide.md  progress-reporting-example.md  prompts-guide.md  remote-mcp-deployment.md  remote-mcp-metrics.md  schema-evolution-guide.md  schema-registry-metrics-summary.md  smart_defaults_integration_guide.md  smart_defaults_server_integration_example.md  smart_defaults_server_integration_example_old.py  subject-alias.md  use-cases-new.md  use-cases-old.md  use-cases.md  user-role-assignment-guide.md  user-roles-quick-reference.md  v2-migration-guide.md
examples/: README.md  bulk_operations_wizard_example.py  elicitation_demo.py  enhanced_task_demo.py  multi_step_workflow_example.py  resource_discovery_demo.py  test-jwt-validation.py  test-registry-metadata.py  test-remote-mcp.py  test-user-roles.py
glamaai/: Dockerfile.glama  README.md  test-docker-glama.sh
helm/: Chart.yaml  README.md  values-remote-mcp.yaml  values.yaml
inspector-tests/: .env.example  .gitignore  Makefile  README.md  package.json  run-inspector-tests.sh
kubernetes/: .gitignore  check-prerequisites.sh  start-kafka-stack.sh
scripts/: check-lint-issues.sh  ci-lint-check.sh  init-gh-pages.sh  publish-helm-chart.sh  quick-lint-check.sh
tests/: DOCKER_SETUP.md  README.md  advanced_mcp_test.py  cleanup_containers.sh  cleanup_multi_registry.sh  diagnose_migration_issue.py  diagnose_test_environment.py  docker-compose.multi-test.yml  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  fix_registry_modes.py  pytest.ini  quick_registry_check.py  restart_schema_registry.sh  run_all_tests.sh  run_all_versions_migration_tests.sh  run_batch_cleanup_tests.sh  run_comprehensive_tests.sh  run_default_context_dot_tests.sh  run_id_preservation_tests.sh  run_integration_tests.sh  run_migration_integration_tests.sh  run_migration_tests.sh  run_multi_registry_batch_cleanup_tests.sh  run_multi_registry_tests.sh  run_numbered_integration_tests.sh  start_multi_registry_environment.sh  start_test_environment.sh  stop_multi_registry_environment.sh  stop_test_environment.sh  test-unified.sh  test_all_tools_validation.py  test_all_versions_migration.py  test_basic_server.py  test_basic_server_quick.py  test_batch_cleanup.py  test_batch_cleanup_integration.py  test_bulk_migration.py  test_bulk_operations_wizard.py  (+87 more)
(+61 files in other folders)
